<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="177dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        android:src="@drawable/chimwemwe_shaba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plainTxtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/txtName"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/lblTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblTrack"
        app:layout_constraintStart_toStartOf="@+id/plainTxtName"
        app:layout_constraintTop_toBottomOf="@+id/plainTxtName" />

    <TextView
        android:id="@+id/txtTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtTrack"
        android:textIsSelectable="true"
        app:layout_constraintStart_toEndOf="@+id/lblTrack"
        app:layout_constraintTop_toBottomOf="@+id/plainTxtName" />

    <TextView
        android:id="@+id/lblCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lblCountry"
        app:layout_constraintEnd_toEndOf="@+id/lblTrack"
        app:layout_constraintTop_toBottomOf="@+id/lblTrack" />

    <TextView
        android:id="@+id/txtCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCountry"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@+id/txtTrack"
        app:layout_constraintTop_toTopOf="@+id/lblCountry" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lblEmail"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="@+id/lblCountry"
        app:layout_constraintTop_toBottomOf="@+id/lblCountry" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@+id/txtCountry"
        app:layout_constraintTop_toTopOf="@+id/lblEmail" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lblPhone"
        app:layout_constraintEnd_toEndOf="@+id/lblEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPhone"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toTopOf="@+id/lblPhone" />

    <TextView
        android:id="@+id/lblSlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lblSlack"
        app:layout_constraintEnd_toEndOf="@+id/lblPhone"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

    <TextView
        android:id="@+id/txtSlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSlack"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@+id/txtPhone"
        app:layout_constraintTop_toTopOf="@+id/lblSlack" />

</android.support.constraint.ConstraintLayout>